@@ -52,6 +52,11 @@ public class TrackingSearchProvider implements SearchProvider {
 	}
 
 	@Override
+	public Single<Set<String>> listIndices() {
+		return Single.just(Collections.emptySet());
+	}
+
+	@Override
 	public Completable createIndex(IndexInfo info) {
 		JsonObject json = new JsonObject();
 		json.put("mapping", info.getIndexMappings());
