@@ -92,4 +92,9 @@ public class GroupIndexHandler extends AbstractIndexHandler<Group> {
 		});
 	}
 
+	@Override
+	public Set<String> filterUnknownIndices(Set<String> indices) {
+		return filterIndicesByType(indices, Group.composeIndexName());
+	}
+
 }
